--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "arraycompare",
   "version": "1.0.0",
-  "description": "A utility to compare arrays and yield their differences, similarly to git's diff tool.",
+  "description": "A utility to compare arrays and yield their differences, similarly to git's diff tool",
   "main": "ArrayCompare.js",
   "author": "Juan J. Alvarez <juan.alvarez7@upr.edu>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type":"git",
+    "url":"https://github.com/juanjalvarez/ArrayCompareJS.git"
+  }
 }
